// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when active 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0176D2",
      "borderRadius": 2,
      "flexGrow": 1,
      "height": 32,
      "justifyContent": "center",
      "marginEnd": 8,
      "opacity": 1,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingEnd": 5,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "orbit-icons",
            },
            Object {
              "fontSize": 16,
              "height": 16,
              "lineHeight": 16,
              "width": 16,
            },
            Object {
              "color": "#e8edf1",
            },
            Array [
              undefined,
              null,
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#171b1e",
            "fontFamily": "CircularPro-Book",
            "fontSize": 14,
            "fontWeight": "normal",
            "letterSpacing": -0.15,
          },
          Array [
            Object {
              "color": "#46515e",
              "fontSize": 12,
              "lineHeight": 17,
            },
            Object {
              "color": "#fff",
            },
          ],
        ]
      }
    >
      <Text>
        title
      </Text>
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#0064b2",
          "borderBottomEndRadius": 2,
          "borderTopEndRadius": 2,
          "height": 32,
          "justifyContent": "center",
          "marginEnd": -10,
          "marginStart": 10,
          "width": 32,
        }
      }
      testID="closeWrapper"
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "orbit-icons",
            },
            Object {
              "fontSize": 16,
              "height": 16,
              "lineHeight": 16,
              "width": 16,
            },
            Object {
              "color": "#fff",
            },
            Array [
              undefined,
              null,
            ],
          ]
        }
      >
        X
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders with icon 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e8edf1",
      "borderRadius": 2,
      "flexGrow": 1,
      "height": 32,
      "justifyContent": "center",
      "marginEnd": 8,
      "opacity": 1,
      "paddingHorizontal": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingEnd": 5,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "orbit-icons",
            },
            Object {
              "fontSize": 16,
              "height": 16,
              "lineHeight": 16,
              "width": 16,
            },
            Object {
              "color": "#46515e",
            },
            Array [
              undefined,
              null,
            ],
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#171b1e",
            "fontFamily": "CircularPro-Book",
            "fontSize": 14,
            "fontWeight": "normal",
            "letterSpacing": -0.15,
          },
          Array [
            Object {
              "color": "#46515e",
              "fontSize": 12,
              "lineHeight": 17,
            },
            false,
          ],
        ]
      }
    >
      <Text>
        title
      </Text>
    </Text>
  </View>
</View>
`;
